fixed up some css, going to start on stretch, this is a save point for any screw ups

--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .App-logo {
@@ -12,6 +16,7 @@
   height: 150px;
   padding: 20px;
   color: white;
+  width: 100%;
 }
 
 .App-title {
