--- a/friends/src/Components/FriendList.css
+++ b/friends/src/Components/FriendList.css
@@ -3,16 +3,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 1000px;
+    width: 60%;
     margin: 0 auto;
 }
 
 .friends {
     border-bottom: 1px solid black;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 100%;
     padding: 5px 0;
     font-weight: bold;
 }
